# scdc

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: compose.yml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: test.yml
notebooks/: create_model.ipynb
src/scdc/: __init__.py  dataset.py
tests/: test_dataset.py
