[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scdc"
description = "Deep learning solution for the SCDC problem"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
maintainers = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
dependencies = [
  "pandas==2.2.2",
  "pandas-stubs==2.2.2.240603",
  "scipy==1.14.0",
  "tensorflow==2.15.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/wasedatakeuchilab/scdc"
Homepage = "https://github.com/wasedatakeuchilab/scdc"
Repository = "https://github.com/wasedatakeuchilab/scdc"

[project.optional-dependencies]
test = [
  "mypy==1.10.1",
  "pytest==8.2.2",
  "pytest-cov==5.0.0",
  "pytest-describe==2.2.0",
  "pytest-mock==3.14.0",
]
jupyter = [
  "jupyterlab==4.2.3",
  "ipywidgets==8.1.3",
  "kaleido==0.2.1, !=0.2.1.post1",
  "plotly==5.22.0",
]

[tool.hatch.version]
path = "src/scdc/__init__.py"

[tool.hatch.envs.default]
features = ["test", "jupyter"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing:skip-covered src tests {args}"
# test-doc = "pytest --doctest-modules src"
check-type = "mypy src tests {args}"

[tool.hatch.envs.doc]
dependencies = []

[tool.hatch.envs.doc.scripts]

[tool.mypy]
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
  "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=scdc"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
]
